--- a/style_achievement.css
+++ b/style_achievement.css
@@ -2,7 +2,7 @@
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.877), rgba(128, 128, 128, 0));
     padding: 10px 0;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     z-index: 1000;
@@ -10,19 +10,11 @@
 
 .nav-container {
     display: flex;
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     max-width: 1200px;
-    margin: 0 auto;
+    margin-left: 25px;
     padding: 0 20px;
-}
-
-.profile-nav-logo {
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    object-fit: cover;
-    border: 3px solid grey;
-    margin-right: 20px; 
 }
 
 .nav-links {
@@ -31,17 +23,15 @@
 }
 
 .nav-links li {
-    margin-left: 20px;
+    margin-top: 15px;
 }
 
-.nav-links li a {
+.nav-links li a i {
     text-decoration: none;
     text-shadow: 2px 2px rgb(41, 41, 41);
     font-weight: bold;
     color: #cacaca;
-    margin-right: 40px;
-    margin-left: 65px;
-    font-size: 1rem;
+    font-size: 1.8rem;
     transition: color 0.3s;
 }
 
@@ -50,14 +40,10 @@
     text-shadow: 2px 2px black;
 }
 
-.box {
-    margin-top: 35px; 
-}
-
-/* Responsive untuk layar kecil */
+/* Untuk tampilan mobile */
 @media (max-width: 768px) {
     .nav-links {
-        display: none; /* Sembunyikan link di layar kecil */
+        display: none; 
     }
 
     .navbar .nav-container {
@@ -78,25 +64,10 @@ body {
 
 
 .header {
-    margin: 30px 0;
+    margin:0px;
     overflow: hidden;
 }
-h1{
-    text-shadow: 0px 2px 4px #444444e0;
-    color: #000000;
-    margin-top: 15px ;
-    margin-bottom: 0;
-}
-h2{
-    color: #000000;
-    margin-top: 0px;
-    margin-bottom: 0px; 
-    text-shadow: 
-    -1px -1px 0 #ffffff,  
-     1px -1px 0 #ffffff,  
-    -1px  1px 0 #ffffff,  
-     1px  1px 0 #ffffff;  
-}
+
 h4{
     color: #000000;
     font-weight: bold;
@@ -113,7 +84,7 @@ p {
 .container {
     max-width: 500px;
     width: 26%;
-    padding: 40px 10px;
+    padding: 10px 0px;
     margin:0 auto;
     box-sizing: border-box;
     text-align: center;
