--- a/style_akademik.css
+++ b/style_akademik.css
@@ -2,7 +2,7 @@
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.877), rgba(128, 128, 128, 0));
     padding: 10px 0;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     z-index: 1000;
@@ -10,19 +10,11 @@
 
 .nav-container {
     display: flex;
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
-}
-
-.profile-nav-logo {
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    object-fit: cover;
-    border: 3px solid grey;
-    margin-right: 20px; 
 }
 
 .nav-links {
@@ -31,17 +23,15 @@
 }
 
 .nav-links li {
-    margin-left: 20px;
+    margin-top: 15px;
 }
 
-.nav-links li a {
+.nav-links li a i {
     text-decoration: none;
     text-shadow: 2px 2px rgb(41, 41, 41);
     font-weight: bold;
     color: #cacaca;
-    margin-right: 40px;
-    margin-left: 65px;
-    font-size: 1rem;
+    font-size: 1.8rem;
     transition: color 0.3s;
 }
 
@@ -50,10 +40,7 @@
     text-shadow: 2px 2px black;
 }
 
-.box {
-    margin-top: 35px; 
-}
-
+/* Untuk tampilan mobile */
 @media (max-width: 768px) {
     .nav-links {
         display: none; 
@@ -63,6 +50,7 @@
         justify-content: center;
     }
 }
+
 
 
 * {
@@ -80,16 +68,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
-}
-
-.pendidikan-title {
-    text-shadow: 0px 2px 4px #444444e0;
-    color: #000000;
-    text-align: center;
-    font-size: 2.5rem;
-    font-weight: bolder;
-    margin-top: 120px; /* Jarak dari navbar */
-    margin-bottom: 0px; /* Jarak ke pendidikan-section */
 }
 
 .pendidikan-section {
@@ -114,7 +92,7 @@ body {
 }
 
 .pendidikan-box {
-    margin-top: 40px;
+    margin-top: 10px;
     background-color: #333333b0;
     color: #fff;
     padding: 10px ;
@@ -187,13 +165,13 @@ footer {
     justify-content: space-around;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 0px;
   }
   
   .footer-container div {
     flex: 1;
     min-width: 200px;
-    margin: 10px;
+    margin: 0px;
   }
   
   .footer-container h3 {
