--- a/style_album.css
+++ b/style_album.css
@@ -1,71 +1,54 @@
 .navbar {
-  width: 100%;
-  background-image: linear-gradient(
-    rgba(0, 0, 0, 0.877),
-    rgba(128, 128, 128, 0)
-  );
-  padding: 10px 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.877), rgba(128, 128, 128, 0));
+    padding: 10px 0;
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 .nav-container {
-  display: flex;
-  align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.profile-nav-logo {
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-  object-fit: cover;
-  border: 3px solid grey;
-  margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
 .nav-links {
-  list-style: none;
-  display: flex;
+    list-style: none;
+    display: flex;
 }
 
 .nav-links li {
-  margin-left: 20px;
+    margin-top: 15px;
 }
 
-.nav-links li a {
-  text-decoration: none;
-  text-shadow: 2px 2px rgb(41, 41, 41);
-  font-weight: bold;
-  color: #cacaca;
-  margin-right: 40px;
-  margin-left: 65px;
-  font-size: 1rem;
-  transition: color 0.3s;
+.nav-links li a i {
+    text-decoration: none;
+    text-shadow: 2px 2px rgb(41, 41, 41);
+    font-weight: bold;
+    color: #cacaca;
+    font-size: 1.8rem;
+    transition: color 0.3s;
 }
 
 .nav-links li a:hover {
-  color: #ddd;
-  text-shadow: 2px 2px black;
+    color: #ddd;
+    text-shadow: 2px 2px black;
 }
 
-.box {
-  margin-top: 35px;
-}
-
-/* Responsive untuk layar kecil */
+/* Untuk tampilan mobile */
 @media (max-width: 768px) {
-  .nav-links {
-    display: none; /* Sembunyikan link di layar kecil */
-  }
+    .nav-links {
+        display: none; 
+    }
 
-  .navbar .nav-container {
-    justify-content: center;
-  }
+    .navbar .nav-container {
+        justify-content: center;
+    }
 }
 
 body {
@@ -82,31 +65,23 @@ body {
 .container {
   max-width: 1100px;
   width: 100%;
-  padding: 40px 15px;
+  padding: 10px 15px;
   margin: 0 auto;
   box-sizing: border-box;
   text-align: center;
 }
 
-.header {
-  margin: 30px 0;
+.header h3 {
   overflow: hidden;
-}
-
-h1 {
   text-shadow: 0px 2px 4px #444444e0;
   color: #000000;
-  margin-top: 35px;
+  margin-top: 10px;
   margin-bottom: 0;
-}
-h2 {
-  margin-top: 0px;
-  text-shadow: 2px 2px #f3f3f3;
 }
 p {
   text-shadow: 0px 2px 4px #444444e0;
   color: #000000;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: bolder;
 }
 
@@ -116,7 +91,7 @@ p {
   align-items: center;
   max-width: 100%;
   height: 400px;
-  margin: 50px auto;
+  margin: 44px auto;
   overflow: hidden;
 }
 
